@@ -10,7 +10,6 @@ import games.loveletter.cards.CardType;
 import java.util.ArrayList;
 import java.util.List;
 
-import static java.util.stream.Collectors.toList;
 import static utilities.Utils.enumNames;
 import static utilities.Utils.enumToOneHot;
 
@@ -22,9 +21,9 @@ public class LLActionFeaturesMedium implements IActionFeatureVector {
     public LLActionFeaturesMedium() {
         List<String> allNames = new ArrayList<>();
         // For each card type, is this the card played
-        allNames.addAll(enumNames(CardType.class).stream().map(s -> s + "_PLAY").collect(toList()));
+        allNames.addAll(enumNames(CardType.class).stream().map(s -> s + "_PLAY").toList());
         // For each card type, is this the card guessed (where that is relevant - for GUARD)
-        allNames.addAll(enumNames(CardType.class).stream().map(s -> s + "_GUESS").collect(toList()));
+        allNames.addAll(enumNames(CardType.class).stream().map(s -> s + "_GUESS").toList());
         localNames = allNames.toArray(new String[0]);
     }
 
@@ -34,9 +33,8 @@ public class LLActionFeaturesMedium implements IActionFeatureVector {
     }
 
     @Override
-    public double[] featureVector(AbstractAction a, AbstractGameState state, int playerID) {
+    public double[] doubleVector(AbstractAction a, AbstractGameState state, int playerID) {
         double[] retValue = new double[names().length];
-        LoveLetterGameState llgs = (LoveLetterGameState) state;
         if (!(a instanceof PlayCard))
             return retValue;
         CardType cardPlayed = ((PlayCard) a).getCardType();
